--- a/src/generator/css/base.less
+++ b/src/generator/css/base.less
@@ -262,6 +262,10 @@ body {
     hr {
         @apply block sm:hidden  w-11/12 sm:w-full my-4 sm:my-8 ml-5 sm:ml-0 h-1;
         background-color: var(--color-grey-primary); 
+
+        @media (prefers-color-scheme:dark) {
+            background-color: var(--color-white-primary);
+        }
     }
 
     .form-container {
@@ -641,6 +645,17 @@ body .content > .post {
     }
 }
 
+.linkedin-icon, .itewiki-icon {
+    color: #2A2A2A; 
+}
+
+
+@media (prefers-color-scheme: dark) {
+    .linkedin-icon, .itewiki-icon  {
+        color: var(--color-white-primary); 
+    }
+}
+
 .cta-button-footer {
     @apply bg-[var(--color-accent)] text-[var(--color-primary)] tracking-wider uppercase text-xl sm:text-2xl;
     text-decoration: none;
@@ -984,7 +999,7 @@ body .content .hero-banner {
 }
 
 body .content > section.why-us {
-  @apply relative z-20 -mt-48 pt-8 sm:pt-32 mb-16 sm:mb-36 pb-5 sm:pb-12 ;
+  @apply relative z-20 -mt-48 pt-8 sm:pt-32 pb-5 sm:pb-12 ;
   background-color: var(--color-section-bg);
 
    .intro.row {
@@ -1664,9 +1679,11 @@ body.post-page {
 }
 
 .trusted-by {
-    margin-bottom: 5rem;
+    @apply pt-16 sm:pt-36 pb-20 -mb-1;
+    background-color: var(--color-grey-offset);
+
   h2 {
-    @apply pl-5 sm:pl-3 leading-tight sm:leading-normal;
+    @apply pl-5 sm:pl-3 leading-tight sm:leading-normal text-[var(--color-grey-primary)];
     font-size: 28px;
     font-family: var(--font-h1);
     font-weight: 700;
@@ -1864,15 +1881,17 @@ body.post-page {
 
 /** Embla Carousel */
 
+.embla-carousel-div {
+    @apply text-[var(--color-grey-primary)] bg-[var(--color-grey-offset)];
+}
+
 .embla-h2 {
-    text-transform: capitalize;
-    padding-left: 1.25rem;
+    @apply pl-5 sm:pl-3 leading-tight sm:leading-normal text-[var(--color-grey-primary)];
     font-size: 28px;
     font-family: var(--font-h1);
     font-weight: 700;
     border: unset;
     text-transform: uppercase;
-    line-height: 1.25;
 
     @media (min-width: 640px) {
         padding-left: 0.75rem;
